syntax = "proto3";

package go.micro.srv.config;

service Config {
  rpc Status(StatusRequest) returns (StatusResponse) {}
}

message StatusRequest {

}

message StatusResponse {
  bool APPLIANCE_IS_CONFIGURED = 1;
  bool APPLIANCE_IS_DEMO = 2;
  bool APPLIANCE_IS_REGISTERED = 3;
  string GIT_COMMIT_STRING = 4;
  bool SMB_USER_EXISTS = 5;
}
